--- a/bike_prediction_project/templates/index.html
+++ b/bike_prediction_project/templates/index.html
@@ -92,6 +92,7 @@
 <div class="buttonGroup">
 <a href="/project"><button>My Project</button></a>
 <a href="/contact"><button>Contact us</button></a>
+<a href="/history"><button>History</button></a>
 <img src="https://c4.wallpaperflare.com/wallpaper/32/42/456/harley-davidson-bikes-artist-digital-art-wallpaper-preview.jpg" alt="" class="bike-img">
 </div>
 
